<resources>
    <string name="app_name">TW0.1</string>
    <string name="action_settings">Settings</string>
    <string name="intelligance">INT</string>
    <string name="dex">DEX</string>
    <string name="str">STR</string>
    <string name="wis">WIS</string>
    <string name="con">CON</string>
    <string name="cha">CHA</string>
    <string name="chr_name">Charecter Name</string>
    <string name="STR">STR</string>
    <string name="DEX">DEx</string>
    <string name="INT">INT</string>
    <string name="WIS">WIS</string>
    <string name="CHA">CHA</string>
    <string name="CON">CON</string>
    <string name="CHR">CHR</string>
    <string name="sharedPref">sharedPref</string>
</resources>
