<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/chr_name"
            android:ems="10"
            android:id="@+id/editText7" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.873" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6"/>
    <TextView
            android:text="@string/chr_name"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView7"
            android:textSize="12dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/con"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView6"
            android:textSize="25dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/con"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.873" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/cha"
            android:ems="10"
            android:id="@+id/editText5" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.873" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6"/>
    <TextView
            android:text="@string/cha"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView5"
            android:textSize="25dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/intelligance"
            android:ems="10"
            android:id="@+id/editText4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.873" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <TextView
            android:text="@string/intelligance"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView4"
            android:textSize="25dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/wis"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.873" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4"/>
    <TextView
            android:text="@string/wis"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView3"
            android:textSize="25dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/dex"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.873" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"/>
    <TextView
            android:text="@string/dex"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView2"
            android:textSize="25dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/str"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.873" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/str"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView"
            android:textSize="25dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText7" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>